Created navigation to the main page

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -20,5 +20,9 @@
 
         <button>Add Campground</button>
     </form>
+
+    <footer>
+        <a href="/campgrounds">All Campgrounds</a>
+    </footer>
 </body>
 </html>
