--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Create Campground</title>
 </head>
 <body>
     <form action="/campgrounds" method="POST">
@@ -22,7 +22,7 @@
     </form>
 
     <footer>
-        <a href="/campgrounds">All Campgrounds</a>
+        <a href="/campgrounds">Back To Campgrounds</a>
     </footer>
 </body>
 </html>
